# inmo_velar

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  ESTADO_TAREAS.md  INICIO_LIMPIO.bat  Procfile  README.md  TAREAS_PENDIENTES.md  analyze_modules.py  apply_audit_final.py  apply_audit_full.py  apply_fix.py  apply_fix_v2.py  apply_legal_rep_migration.py  apply_logo_migration.py  changes.txt  check_columns.py  check_conceptos_columns.py  check_discount_types.py  check_liquidaciones_structure.py  check_locks.py  check_schema.py  check_schema_issues.py  check_structure.py  check_syntax.py  check_syntax_recaudos.py  check_syntax_reportes.py  check_usuarios.py  check_views.py  compile_errors.txt  comprehensive_db_debug.py  create_bonif_table.py  create_bonificaciones_table.py  create_ipc_table.sql  db_debug_output.txt  db_schema_update_bonuses.py  debug_advisor_query.py  debug_discount_insert.py  (+82 more)
assets/: aurora.css  matrix.js
config/: requirements.txt  requirements_pdf_elite.txt  shared_db_config.py  start_reflex.ps1  start_server.ps1
docs/: ANALISIS_CODIGO_PROYECTO.md  API_INTERNA.md  ARQUITECTURA.md  CONFIGURACION_COMPLETADA.md  CONTEXTO.md  DB_INTEGRATION_GUIDE.md  DOCS_CONFIGURACION_O365.md  FASE4_COMPLETO.md  FASE4_RESUMEN.md  INTEGRACION_COMPLETADA.md  MANUAL_USUARIO.md  PDF_ELITE_DOCUMENTACION.md  PLAN_EJECUCION_PROYECTO.md  PROPUESTA_NOTIFICACIONES.md  UI_BUTTONS_GUIDE.md  cargar_documentos.md  diagnostico_errores.md  reports_module_design.md  task.md  task_pdf.md  task_pdf_fase4.md  task_reflex.md
inmobiliaria_velar/: __init__.py  (+1 more)
(+677 files in other folders)
